--- a/coffee-house/src/layout/Content/03_about/index.scss
+++ b/coffee-house/src/layout/Content/03_about/index.scss
@@ -39,12 +39,13 @@
   img {
     position: absolute;
     transition: all 0.5s ease-in-out;
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        transform: scale(0.92);
 
-    &:hover {
-      transform: scale(0.92);
-
-      @include media-tablet-port {
-        transform: scale(0.96);
+        @include media-tablet-port {
+          transform: scale(0.96);
+        }
       }
     }
   }
