--- a/coffee-house/src/layout/Content/04_app/index.scss
+++ b/coffee-house/src/layout/Content/04_app/index.scss
@@ -47,6 +47,26 @@
   transition: all 0.5s ease-in-out;
 }
 
+@media (hover: hover) and (pointer: fine) {
+  .app__button:hover {
+    background-color: $color-secondary;
+    transition: all 0.5s ease-in-out;
+
+    .button__icon_ios {
+      background: url(./../../../assets/icons/ios-hover.svg);
+    }
+    .button__icon_android {
+      background: url(./../../../assets/icons/android-hover.svg);
+    }
+    .button__text_small {
+      color: $color-primary;
+    }
+    .button__text_large {
+      color: $color-primary;
+    }
+  }
+}
+
 .button__icon {
   display: inline-block;
   width: 3.6rem;
@@ -73,25 +93,6 @@
   transition: all 0.5s ease-in-out;
 }
 
-.app__button {
-  &:hover {
-    background-color: $color-secondary;
-    transition: all 0.5s ease-in-out;
-
-    .button__icon_ios {
-      background: url(./../../../assets/icons/ios-hover.svg);
-    }
-    .button__icon_android {
-      background: url(./../../../assets/icons/android-hover.svg);
-    }
-    .button__text_small {
-      color: $color-primary;
-    }
-    .button__text_large {
-      color: $color-primary;
-    }
-  }
-}
 .app__column-2 {
   @include media-tablet-land {
     max-width: 63rem;
